#133 & #126 "Mark as watched"-Button no longer visible (#135)
Not a pretty fix nor great UX, but at least it works for now

--- a/subs.css
+++ b/subs.css
@@ -37,7 +37,7 @@
 }
 
 .subs-btn-mark-watched {
-  display: none;
+  /*display: none;*/
   width: 24px;
   background-image: url('images/markwatched.svg'), /*works in Firefox*/ url('chrome-extension://__MSG_@@extension_id__/images/markwatched.svg'); /*works in Chrome*/
   background-size: cover;
